# vug_conan_img2ascii

./: .clang-format  CMakeLists.txt  Pipfile  conanfile.py  lunch.sh  start_emulator.sh
src/: img2ascii.cpp  img2ascii.h  main.cpp
test_package/: conanfile.py
